--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'androidx.navigation.safeargs.kotlin'
 }
@@ -45,9 +46,9 @@ dependencies {
     implementation "androidx.core:core-ktx:$ktx_version"
 
     implementation "androidx.appcompat:appcompat:$compat_version"
-    implementation 'androidx.activity:activity-ktx:1.2.1'
+    implementation 'androidx.activity:activity-ktx:1.2.2'
 
-    def fragment_version = "1.3.1"
+    def fragment_version = "1.3.2"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "com.google.android.material:material:$material_version"
     implementation "androidx.constraintlayout:constraintlayout:$layout_constraint"
@@ -68,6 +69,12 @@ dependencies {
     def nav_version = "2.3.4"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    def room_version = "2.2.6"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
